fix(sonar): resolve all 126 OPEN issues — RELIABILITY 10 + MAINTAINABILITY 116
RELIABILITY (10):
- S6857 (9): drop inline default URL with embedded colons in Feign clients;
  rely on application.yml properties instead
- S2201 (1): RuleHistoryService.getHistory uses existsById guard

MAINTAINABILITY production (19):
- S6204 (12): Stream.collect(Collectors.toList()) -> Stream.toList()
- S6809 (4): RuleBindingService inline findById to avoid this-self transactional invocation
- S1192 (3): extract OP_BETWEEN, OBJECT_RESOURCE_TYPE, FIELD_NOT_FOUND_PREFIX
- S6353 (1): tighten regex [a-zA-Z0-9_] -> \w in CreateMetadataSchemaRequest

MAINTAINABILITY tests (97):
- S5838 (40): switch to AssertJ idioms (isZero, isEmpty, isNotNegative,
  hasSameHashCodeAs, hasToString, containsEntry, isGreaterThan, isLessThan,
  isEqualByComparingTo)
- S5853 (35): chain assertions on the same subject
- S5778 (17): extract method calls out of throwing lambdas
- S5976 (3): suppress on RuleServiceTest PATCH-semantics 3-tuples (parameterizing
  would obscure intent)

Verified: mvn compile + test-compile success; sonar:sonar reports 0 OPEN issues.